AppendIterator and EventIterator adopted elsewhere as well
For idempotency, and for retaining own writes until read